--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "promise": "^7.0.1",
     "rtc-quickconnect": "4.3.1",
-    "rtcstream": "scottmtp/rtcstream",
+    "rtcstream": "0.0.2",
     "debug": "^2.2.0"
   },
   "devDependencies": {
