Add istanbul coverage script.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "version": "0.0.3",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "coverage": "istanbul cover _mocha -- test/ -R spec"
   },
   "dependencies": {
     "promise": "^7.0.1",
